# record3d

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  demo-main.py  depth_coord.py  echo-server.py  pyproject.toml  setup.py  usb_test.py  webrtc-demo.py
.github/: FUNDING.yml
include/record3d/: Record3DStream.h  Record3DStructs.h  WebRTCSignaling.h
libs/unix/libusbmuxd/: CMakeLists.txt
libs/unix/libusbmuxd/libs/libplist/: CMakeLists.txt
libs/unix/libusbmuxd/libs/libplist/src/: plist.c  plist.h
libs/unix/libusbmuxd/src/: libusbmuxd.c  socket.c
libs/unix/lzfse-lzfse-1.0/: CMakeLists.txt
libs/win/libusbmuxd/: CMakeLists.txt  README.md
libs/win/libusbmuxd/include/: usbmuxd-proto.h  usbmuxd.h
libs/win/libusbmuxd/libs/libplist/: CMakeLists.txt
libs/win/libusbmuxd/libs/libplist/include/plist/: plist.h
libs/win/libusbmuxd/libs/libplist/src/: bplist.c  plist.c  ptrarray.c  xplist.c
libs/win/libusbmuxd/src/: collection.c  libusbmuxd.c  msc_config.h  socket.c  thread.c
libs/win/lzfse-lzfse-1.0/src/: lzfse_decode.c  lzfse_encode.c
python-bindings/pybind11/: CMakeLists.txt
python-bindings/pybind11/include/pybind11/: numpy.h
python-bindings/pybind11/tools/: FindPythonLibsNew.cmake  pybind11Tools.cmake
python-bindings/src/: PythonBindings.cpp
src/: DemoMain.cpp  JPEGDecoder.cpp  JPEGDecoder.h  Record3DStream.cpp  WebRTCSignaling.cpp
tests/: test_webrtc_stream.cpp
